--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Moderustic:wght@300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Varela&display=swap" rel="stylesheet">
+
     <title>Valoração - Planaflor</title>
 
     <!-- Biblioteca D3.js -->
@@ -38,7 +39,11 @@
     </style>
 </head>
 <body>
-    <h1>Resultados da Valoração</h1>
+    
+    <div class="topnav">
+        <h1>Resultados da Valoração</h1>
+
+    </div>
 
     <!-- Dropdown para selecionar o Cenário -->
     <div class="dropdown">
@@ -55,7 +60,7 @@
     </div>
     <h2>Resultados por UF</h2>
     <div id="chartEstado" class="chart"></div>
-    
+
     <h2>Resultados por Bioma</h2>
 
     <div id="chartBioma" class="chart"></div>
